--- a/RaceManager/RaceManager.Client/Views/DriverView.xaml
+++ b/RaceManager/RaceManager.Client/Views/DriverView.xaml
@@ -10,40 +10,49 @@
              d:DesignHeight="600" d:DesignWidth="800">
 
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <DataGrid ItemsSource="{Binding Drivers}" SelectedItem="{Binding SelectedDriver}" AutoGenerateColumns="False" EnableRowVirtualization="True" SelectionMode="Single" RowDetailsVisibilityMode="Collapsed" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Width="Auto" Header="Id" Binding="{Binding Id}" CanUserResize="False" />
-                    <DataGridTextColumn Width="Auto" Header="First Name" Binding="{Binding FirstName}" />
-                    <DataGridTextColumn Width="Auto" Header="Last Name" Binding="{Binding LastName}" />
-                    <DataGridTextColumn Width="Auto" Header="UMCN" Binding="{Binding UMCN}" />
-                </DataGrid.Columns>
-            </DataGrid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="15"/>
+        </Grid.RowDefinitions>
+
+        <DataGrid Grid.Row="0" ItemsSource="{Binding Drivers}" SelectedItem="{Binding SelectedDriver}" AutoGenerateColumns="False" EnableRowVirtualization="True" SelectionMode="Single" RowDetailsVisibilityMode="Collapsed" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="Auto" Header="Id" Binding="{Binding Id}" CanUserResize="False" />
+                <DataGridTextColumn Width="Auto" Header="First Name" Binding="{Binding FirstName}" />
+                <DataGridTextColumn Width="Auto" Header="Last Name" Binding="{Binding LastName}" />
+                <DataGridTextColumn Width="Auto" Header="UMCN" Binding="{Binding UMCN}" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <Button Content="Refresh" Width="75" Command="{Binding RefreshCommand}" />
+            <Button Content="New" Width="75" Command="{Binding NewCommand}" />
+            <Button Content="Edit" Width="75" Command="{Binding EditCommand}" />
+            <Button Content="Copy" Width="75" Command="{Binding CopyCommand}" />
+            <Button Content="Delete" Width="75" Command="{Binding DeleteCommand}" />
+            <Button Content="Save" Width="75" Command="{Binding SaveCommand}" />
+        </StackPanel>
+
+        <StackPanel Grid.Row="4" Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
-                <Button Content="Refresh" Width="75" Command="{Binding RefreshCommand}" />
-                <Button Content="New" Width="75" Command="{Binding NewCommand}" />
-                <Button Content="Edit" Width="75" Command="{Binding EditCommand}" />
-                <Button Content="Copy" Width="75" Command="{Binding CopyCommand}" />
-                <Button Content="Delete" Width="75" Command="{Binding DeleteCommand}" />
-                <Button Content="Save" Width="75" Command="{Binding SaveCommand}" />
+                <Label Content="Id" />
+                <TextBox Text="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="Auto" IsReadOnly="True" />
             </StackPanel>
-            <StackPanel Orientation="Vertical">
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Id" />
-                    <TextBox Text="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="Auto" IsReadOnly="True" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="First Name" />
-                    <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Last Name" />
-                    <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="UMCN" />
-                    <TextBox Text="{Binding UMCN, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="First Name" />
+                <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Last Name" />
+                <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="UMCN" />
+                <TextBox Text="{Binding UMCN, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
             </StackPanel>
         </StackPanel>
     </Grid>
