--- a/RaceManager/RaceManager.Client/Views/VehicleView.xaml
+++ b/RaceManager/RaceManager.Client/Views/VehicleView.xaml
@@ -10,50 +10,59 @@
              d:DesignHeight="600" d:DesignWidth="800">
 
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <DataGrid ItemsSource="{Binding Vehicles}" SelectedItem="{Binding SelectedVehicle}" AutoGenerateColumns="False" EnableRowVirtualization="True" SelectionMode="Single" RowDetailsVisibilityMode="Collapsed" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Width="Auto" Header="Id"  Binding="{Binding Id}" CanUserResize="False" />
-                    <DataGridTextColumn Width="Auto" Header="Manufacturer" Binding="{Binding Manufacturer}" />
-                    <DataGridTextColumn Width="Auto" Header="Model" Binding="{Binding Model}" />
-                    <DataGridTextColumn Width="Auto" Header="Type" Binding="{Binding Type}" />
-                    <DataGridTextColumn Width="Auto" Header="Engine Horsepower" Binding="{Binding EngineHorsepower}" />
-                    <DataGridTextColumn Width="Auto" Header="Engine Displacement" Binding="{Binding EngineDisplacement}" />
-                </DataGrid.Columns>
-            </DataGrid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="15"/>
+        </Grid.RowDefinitions>
+
+        <DataGrid Grid.Row="0" ItemsSource="{Binding Vehicles}" SelectedItem="{Binding SelectedVehicle}" AutoGenerateColumns="False" EnableRowVirtualization="True" SelectionMode="Single" RowDetailsVisibilityMode="Collapsed" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="Auto" Header="Id"  Binding="{Binding Id}" CanUserResize="False" />
+                <DataGridTextColumn Width="Auto" Header="Manufacturer" Binding="{Binding Manufacturer}" />
+                <DataGridTextColumn Width="Auto" Header="Model" Binding="{Binding Model}" />
+                <DataGridTextColumn Width="Auto" Header="Type" Binding="{Binding Type}" />
+                <DataGridTextColumn Width="Auto" Header="Engine Horsepower" Binding="{Binding EngineHorsepower}" />
+                <DataGridTextColumn Width="Auto" Header="Engine Displacement" Binding="{Binding EngineDisplacement}" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <Button Content="Refresh" Width="75" Command="{Binding RefreshCommand}" />
+            <Button Content="New" Width="75" Command="{Binding NewCommand}" />
+            <Button Content="Edit" Width="75" Command="{Binding EditCommand}" />
+            <Button Content="Copy" Width="75" Command="{Binding CopyCommand}" />
+            <Button Content="Delete" Width="75" Command="{Binding DeleteCommand}" />
+            <Button Content="Save" Width="75" Command="{Binding SaveCommand}" />
+        </StackPanel>
+
+        <StackPanel Grid.Row="4" Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
-                <Button Content="Refresh" Width="75" Command="{Binding RefreshCommand}" />
-                <Button Content="New" Width="75" Command="{Binding NewCommand}" />
-                <Button Content="Edit" Width="75" Command="{Binding EditCommand}" />
-                <Button Content="Copy" Width="75" Command="{Binding CopyCommand}" />
-                <Button Content="Delete" Width="75" Command="{Binding DeleteCommand}" />
-                <Button Content="Save" Width="75" Command="{Binding SaveCommand}" />
+                <Label Content="Id" />
+                <TextBox Text="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="Auto" IsReadOnly="True" />
             </StackPanel>
-            <StackPanel Orientation="Vertical">
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Id" />
-                    <TextBox Text="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="Auto" IsReadOnly="True" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Manufacturer" />
-                    <TextBox Text="{Binding Manufacturer, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Model" />
-                    <TextBox Text="{Binding Model, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Type" />
-                    <TextBox Text="{Binding Type, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Engine Horsepower" />
-                    <TextBox Text="{Binding EngineHorsepower, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label Content="Engine Displacement" />
-                    <TextBox Text="{Binding EngineDisplacement, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
-                </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Manufacturer" />
+                <TextBox Text="{Binding Manufacturer, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Model" />
+                <TextBox Text="{Binding Model, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Type" />
+                <TextBox Text="{Binding Type, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Engine Horsepower" />
+                <TextBox Text="{Binding EngineHorsepower, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Engine Displacement" />
+                <TextBox Text="{Binding EngineDisplacement, UpdateSourceTrigger=PropertyChanged}" Height="23" Width="150" />
             </StackPanel>
         </StackPanel>
     </Grid>
